# blander-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json  test_ping.py
references/blender_mcp/mcp/: README.md  pyproject.toml  requirements_dev.txt
references/blender_mcp/mcp/blmcp/: __init__.py  __main__.py
references/blender_mcp/mcp/blmcp/data/api/: bmesh.ops.rst  bmesh.utils.rst  bpy.app.icons.rst  bpy.app.rst  bpy.ops.action.rst  bpy.ops.anim.rst  bpy.ops.boid.rst  bpy.ops.brush.rst  bpy.ops.cachefile.rst  bpy.ops.camera.rst  bpy.ops.cloth.rst  bpy.ops.console.rst  bpy.ops.constraint.rst  bpy.ops.dpaint.rst  bpy.ops.ed.rst  bpy.ops.gpencil.rst  bpy.ops.import_anim.rst  bpy.ops.import_curve.rst  bpy.ops.import_scene.rst  bpy.ops.info.rst  bpy.ops.material.rst  bpy.ops.nla.rst  bpy.ops.object.rst  bpy.ops.pointcloud.rst  bpy.ops.pose.rst  bpy.ops.poselib.rst  bpy.ops.texture.rst  bpy.ops.transform.rst  bpy.ops.wm.rst  bpy.props.rst  bpy.types.AOV.rst  bpy.types.ASSETBROWSER_UL_metadata_tags.rst  bpy.types.ActionChannelbag.rst  bpy.types.ActionLayer.rst  bpy.types.ActionStrip.rst  bpy.types.AddStrip.rst  bpy.types.Addon.rst  bpy.types.AlphaOverStrip.rst  bpy.types.AlphaUnderStrip.rst  bpy.types.AnimData.rst  (+588 more)
references/blender_mcp/mcp/blmcp/data/api/bpy_types_enum_items/: attr_storage_type_items.rst  attribute_curves_domain_items.rst  attribute_domain_only_mesh_no_edge_items.rst  attribute_domain_with_auto_items.rst  axis_xy_items.rst  bake_margin_type_items.rst  bake_pass_filter_type_items.rst  boidrule_type_items.rst  brush_automasking_flag_items.rst  brush_gpencil_sculpt_types_items.rst  brush_gpencil_weight_types_items.rst  context_mode_items.rst  driver_target_rotation_mode_items.rst  dt_layers_select_dst_items.rst  dt_layers_select_src_items.rst  dt_method_edge_items.rst  dt_method_poly_items.rst  dt_mix_mode_items.rst  event_type_items.rst  fcurve_auto_smoothing_items.rst  fileselect_params_sort_items.rst  fmodifier_type_items.rst  image_generated_type_items.rst  index.rst  keyframe_handle_type_items.rst  keying_flag_api_items.rst  linestyle_color_modifier_type_items.rst  linestyle_geometry_modifier_type_items.rst  linestyle_thickness_modifier_type_items.rst  mesh_select_mode_items.rst  mesh_walk_delimit_edge_loop_items.rst  metaelem_type_items.rst  modifier_shrinkwrap_mode_items.rst  node_clamp_items.rst  (+36 more)
references/blender_mcp/mcp/blmcp/data/manual/: versions.rst
references/blender_mcp/mcp/blmcp/tools/: __init__.py  execute_blender_code.py  get_blendfile_summary_datablocks.py  get_blendfile_summary_missing_files.py  get_blendfile_summary_of_linked_libraries_toolcode.py  get_blendfile_summary_path_info.py  get_blendfile_summary_usage_guess.py  get_blendfile_summary_usage_guess_toolcode.py  get_object_detail_summary.py  get_objects_summary.py  get_objects_summary_toolcode.py  get_python_api_docs.py  get_screenshot_of_area_as_image.py  get_screenshot_of_window_as_image.py  get_screenshot_of_window_as_json.py  jump_to_tab_by_name.py  jump_to_view3d_object_by_name.py  jump_to_view3d_object_by_name_toolcode.py  jump_to_view3d_object_data_by_name.py  jump_to_view3d_object_data_by_name_toolcode.py  render_viewport_to_path.py  search_manual_docs.py
(+3405 files in other folders)
