[project]
name = "blander-mcp"
version = "0.1.0"
description = "AI animation factory MCP server for Blender"
requires-python = ">=3.13"
dependencies = [
    "docutils>=0.21",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
]

[project.scripts]
blander-mcp = "mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
